--- a/src/cmd/fpcalc.Info.plist.in
+++ b/src/cmd/fpcalc.Info.plist.in
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.acoustid.fpcalc</string>
+	<string>net.filebot.org.acoustid.fpcalc</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
